[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-agent"
version = "0.1.0"
description = "AI Personal Learning Assistant powered by NeuroMemory"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "learning", "agent", "knowledge-graph", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "neuromemory-client>=0.1.0",  # 依赖 NeuroMemory SDK
    "rich>=13.0.0",  # 终端美化
    "typer>=0.9.0",  # CLI 框架
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",  # 网页解析
    "markdownify>=0.11.0",  # HTML -> Markdown
    "pypdf>=3.17.0",  # PDF 解析
    "networkx>=3.0",  # 图处理
    "matplotlib>=3.7.0",  # 可视化
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
echo = "echo.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/echo"
Documentation = "https://echo-docs.example.com"
Repository = "https://github.com/yourusername/echo"

[tool.setuptools.packages.find]
where = ["."]
include = ["echo*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=echo --cov-report=term-missing"
